apps/immich-frame/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-frame
spec:
  hostnames:
  - immich-frame.camsab.me
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: http-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: immich-frame
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
